# Decentralized-Carbon-Credit-Marketplace

./: .dockerignore  .gitignore  Dockerfile  HACKATHON_SUBMISSION.md  README.md  hardhat.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
contracts/: ape-config.yaml
contracts/.build/: __local__.json
contracts/contracts/: CarbonCredit.sol  Marketplace.sol
contracts/scripts/: deploy.py
marketplace_app/: deploy_web3.py  rxconfig.py
marketplace_app/assets/: web3.js
marketplace_app/marketplace_app/: abi.py  constants.py  marketplace_app.py  state.py
